# stream-scenario-console

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TASK.md  pyproject.toml
components/vertical_use_case_list/: README.md  pyproject.toml
components/vertical_use_case_list/backend/gradio_verticalusecaselist/: __init__.py  verticalusecaselist.py
components/vertical_use_case_list/demo/: app.py  space.py
components/vertical_use_case_list/frontend/: Example.svelte  Index.svelte  package-lock.json  package.json  types.ts
src/console/: analogies.py  app.py  dtos.py  handlers.py  help_texts.py  parser.py  persistence.py  runner.py  settings.py  test_runner.py  use_case_state.py
src/console/converters/: __init__.py  state_converter.py
src/console/static/: app.css  app.js
tests/: test_allow_delete.py  test_dynamic_tabs_state.py  test_handlers_config.py  test_handlers_fields.py  test_handlers_send.py  test_parser.py  test_persistence.py  test_runner.py  test_sidebar_handlers.py  test_use_case_state.py
