[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "qa-clickhouse-kafka-helper"
version = "0.2.1"
description = "QA-консоль для прогона сценариев в Kafka и ClickHouse (Gradio 6)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "adaptix>=3.0.0b11",
    "aiokafka>=0.13.0",
    "clickhouse-connect>=0.9.2",
    "gradio>=6.12.0",
    "gradio_verticalusecaselist",
]

[tool.uv.sources]
gradio_verticalusecaselist = { path = "components/vertical_use_case_list", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.25.0",
    "build>=1.0.0",
]

[project.scripts]
run-app = "console.app:main"
run-tests = "console.test_runner:main"

[tool.hatch.build.targets.wheel]
packages = ["src/console"]

[tool.hatch.build.targets.wheel.force-include]
"src/console/static" = "console/static"

[tool.hatch.build.targets.sdist]
include = [
    "src/console/**",
    "tests/**",
    "README.md",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
